[package]
name = "tactile"
description = "A library for representing, manipulating, and drawing isohedral tilings on the plane."
authors = ["Antoine Büsch <antoine.busch@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20"
